[New Feature][Blue Progress Bar] Changes reference to Canon.css to local copy

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,7 +4,7 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="http://ci.canon.rackspace.com/view/Canon/job/canon-screenshot/lastSuccessfulBuild/artifact/dist/canon.min.css">
+  <link rel="stylesheet" href="/canon.css">
   <link rel="stylesheet" type="text/css" href="/css/site.css">
   <link rel="stylesheet" type="text/css" href="/css/syntax.css">
 
@@ -13,6 +13,7 @@
   <script type="application/javascript" src="/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="/js/site.js"></script>
   <script type="application/javascript" src="/js/popover.js"></script>
+  <script type="application/javascript" src="/js/collapsible-highlight.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
