[New Feature][Blue Progress Bar] Removes errant artifact last-child rule and changes spacing method for stacked bars

--- a/lib/stylesheets/patterns/_progress.scss
+++ b/lib/stylesheets/patterns/_progress.scss
@@ -128,15 +128,11 @@
   float: left;
 }
 
-.rs-progress-inner:last-child {
-  margin-bottom: 0px !important;
-}
-
 .rs-progress-stack { 
   .rs-progress-inner {
     clear: left;
     height:4px;
-    margin-bottom: 1px;
+    border-bottom: 1px #fff solid
   }
   
   .rs-bar {
@@ -149,7 +145,7 @@
 }
 
 .rs-progress-inner:last-of-type {
-  margin-bottom:0px;
+  border-bottom: none;
 }
 
 
