--- a/lib/stylesheets/patterns/_progress.scss
+++ b/lib/stylesheets/patterns/_progress.scss
@@ -5,26 +5,26 @@
   @include clearfix;
 }
 
-.rs-progress-inner::before,
-.rs-progress-inner::after {
+.rs-progress::before,
+.rs-progress::after {
   position: absolute;
   display: block;
   content: '';
 }
 
-.rs-progress-inner::before {
+.rs-progress::before {
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
+  height: 15px;
   border: 1px solid $grey300;
 }
 
-.rs-progress-inner::after {
+.rs-progress::after {
   top: 1px;
   left: 1px;
   right: 1px;
-  bottom: 1px;
+  height: 13px;
   border: 1px solid $white;
 }
 
@@ -90,6 +90,14 @@
   
   $afterOffset: 2px;
 
+  &.rs-progress::before {
+    width: $width + $afterOffset;
+  }
+
+  &.rs-progress::after {
+    width: $width;
+  }
+
   .rs-progress-inner {
     float: left; 
     width: $width;
@@ -144,9 +152,17 @@
   }
 }
 
+.rs-progress-stack::before {
+  bottom: 0px;
+  height: auto;
+}
+
+.rs-progress-stack::after {
+  bottom: 1px;
+  height: auto;
+}
+
 .rs-progress-inner:last-of-type {
   border-bottom: none;
 }
-
-
 
