Demo for generic progress labels.

--- a/lib/stylesheets/_base.scss
+++ b/lib/stylesheets/_base.scss
@@ -118,6 +118,10 @@ hr {
   border-bottom: 1px solid #fff;
 }
 
+span {
+  vertical-align: middle;
+}
+
 code {
     overflow: auto;
     padding: 0 5px 1px;
