--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -7,7 +7,7 @@
       </div>
       <div class="rs-popover-footer rs-btn-group">
         <button type="submit" class="rs-btn rs-btn-primary">Delete Item</button>
-        <span class="rs-btn rs-btn-link">Cancel</button>
+        <span class="rs-btn rs-btn-link">Cancel</span>
       </div>
     </form>
   </div>
