--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -46,8 +46,9 @@
       </ul>
     </div>
   </div>
-  <script type="application/javascript">
 
+  <!-- Google Analytics -->
+  <script type="application/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -56,6 +57,23 @@
     ga('create', 'UA-42051197-2');
     ga('send', 'pageview');
   </script>
+
+  <!-- OnCue -->
+  <script language="JavaScript" type="text/javascript">
+    (function(){
+    var d = window.document,
+        s = d.createElement("script"),
+        r = /^https?:/i,
+        h = d.getElementsByTagName("head")[0];
+
+    s.setAttribute("type", "text/javascript");
+    s.setAttribute("language", "JavaScript");
+    s.setAttribute("src", "http://oncueapp.appspot.com/API/Accounts/5856729073975296/Deploy.js".replace(r, r.test(d.location.protocol) ? d.location.protocol : "http:"));
+
+    if (h) { h.appendChild(s); }
+    }());
+  </script>
+
 {% if page.popovers %}
 {% for popover in page.popovers %}
   {% include popover %}
