--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -142,7 +142,11 @@
 // Create Sections
 
 .rs-create-header {
-  padding: 30px 30px 0 30px;
+  padding: 30px 30px 30px 30px;
+
+  .rs-page-title {
+    margin: 0;
+  }
 
   & + .rs-detail-section {
     border-top: 1px solid #fff;
