--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,7 +10,7 @@
 
   <script type="application/javascript" src="/canon.js"></script>
   <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
-  <script type="application/javascript" src="/js/bootstrap.min.js"></script>
+  <script type="application/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
   <script type="application/javascript" src="/js/site.js"></script>
   <script type="application/javascript" src="/js/popover.js"></script>
   <script type="application/javascript" src="/js/highlighter.js"></script>
@@ -22,6 +22,7 @@
   <script type="application/javascript" src="/js/overlay.js"></script>
   <script type="application/javascript" src="/js/form.js"></script>
   <script type="application/javascript" src="/js/heartbeat-example.js"></script>
+  <script type="application/javascript" src="/js/messages.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
