[New Feature][Issue-17] Adds two new grey colors to support facet selection

--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -9,7 +9,9 @@ $grey: #999;
 
 $grey50: #e7e7e7;
 $grey100: #d8d8d8;
+$grey150: #e1e1e1;
 $grey200: #ddd;
+$grey250: #d3d3d3;
 $grey300: #ccc;
 $grey400: #999;
 $grey500: #666;
