[New Feature][Issue-17] Adds fixes to site.css for issues caused by nested content

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -1,10 +1,3 @@
-/* @override http://localhost:4000/css/site.css */
-
-/* @override http://localhost:4000/css/site.css */
-
-/* @override http://canon:8888/site.css */
-
-
 @font-face {
 	font-family: source-sans-pro-extra-light;
 	src: url(/fonts/SourceSansPro-ExtraLight.ttf);
@@ -196,12 +189,6 @@
 }
 
 
-.sidebarh3
-{
-  font-size: 22px;
-  text-transform: none;
-}
-
 .tooltip h3
 {
 	margin-bottom: .1em;
@@ -346,10 +333,9 @@ dd
 	margin-bottom: 1em;
 }
 
-code
+.highlight pre code
 {
 	border: 1px solid #e1e1e8;
-	background-color: #f7f7f9;
 	padding: 0 8px;
 	-webkit-border-radius:3px;
 	-moz-border-radius:3px;
@@ -360,8 +346,8 @@ code
 	overflow: auto;
 }
 
-pre code {
-  padding: 3px 8px 2px;
+.highlight pre {
+	padding: 0;
 }
 
 .header-section
@@ -807,12 +793,12 @@ App Layout
 }
 
 .invisible {
-	visibility: hidden;
+  visibility: hidden;
 }
 
 .hidden
 {
-	display: none;
+  display: none;
 }
 
 .rs-detail-section-subtitle
@@ -838,16 +824,67 @@ h4.rs-quiet, h4 .rs-quiet  {
 }
 
 .rs-popover form {
-	margin:0;
+  margin:0;
 }
 
 .rs-overlay {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	right: 0px;
-	bottom: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 999;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+}
+
+.collapsible-highlight {
+	position: relative;
+}
+
+.collapsible-highlight code {
+  height: 100px;
+}
+
+.collapsible-highlight.expanded code {
+  height: auto;
+  max-height: none;
+}
+
+.collapsible-highlight .rs-toggle {
+  display:  none;
+  position: absolute;
+  z-index: 100;
+  left: 10px;
+  top: 100%;
+  padding: 3px 10px;
+  background-color: #1e6ec1;
+  color:  #fff;
+  cursor: pointer;
+  -webkit-border-bottom-right-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-bottomright: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.collapsible-highlight .rs-toggle:hover {
+	text-decoration: underline;
+}
+
+.collapsible-highlight.hover code {
+	border-bottom:  1px #1e6ec1 solid;
+}
+
+.collapsible-highlight.hover .rs-toggle {
+	display: block;
+}
+
+#facets-example {
+  margin: 0 30px 0 0;
+}
+
+#list-view-example {
+  margin-top: 0;
 }
