--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,9 @@
   <script type="application/javascript" src="/js/collapsible-section.js"></script>
   <script type="application/javascript" src="/js/overlay.js"></script>
   <script type="application/javascript" src="/js/form.js"></script>
+  <script type="application/javascript" src="/js/collapsible-highlight.js"></script>
   <script type="application/javascript" src="/js/heartbeat-example.js"></script>
+  <script type="application/javascript" src="/js/facets.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
