[Docs Update][Document List View Interactions]  Adds shame class for alpha-ordered lists

--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -262,6 +262,10 @@ ol:last-child
   margin-bottom: 0px;
 }
 
+ol.alpha-list {
+  list-style-type: upper-alpha;
+}
+
 .site-header-download-canon
 {
 	text-align: center;
