[Enhancement][List View Docs] Adds striped error class to List View Docs

--- a/docs/_includes/list-view-table.html
+++ b/docs/_includes/list-view-table.html
@@ -50,7 +50,7 @@
       <td class="rs-table-text">Data B</td>
     </tr>
     <tr>
-      <td class="rs-table-status rs-table-status-processing rs-table-status-striped"></td>
+      <td class="rs-table-status rs-table-status-error"></td>
       <td class="rs-table-checkbox"><input type="checkbox" /></td>
       <td class="rs-table-cog">
         <div class="rs-dropdown">
@@ -65,7 +65,7 @@
       <td class="rs-table-text">Data C</td>
     </tr>
     <tr>
-      <td class="rs-table-status rs-table-status-error"></td>
+      <td class="rs-table-status rs-table-status-ok rs-table-status-striped"></td>
       <td class="rs-table-checkbox"><input type="checkbox" /></td>
       <td class="rs-table-cog">
         <div class="rs-dropdown">
@@ -80,7 +80,7 @@
       <td class="rs-table-text">Data D</td>
     </tr>
     <tr>
-      <td class="rs-table-status rs-table-status-ok"></td>
+      <td class="rs-table-status rs-table-status-processing  rs-table-status-striped"></td>
       <td class="rs-table-checkbox"><input type="checkbox" /></td>
       <td class="rs-table-cog">
         <div class="rs-dropdown">
@@ -95,7 +95,7 @@
       <td class="rs-table-text">Data E</td>
     </tr>
     <tr>
-      <td class="rs-table-status rs-table-status-ok"></td>
+      <td class="rs-table-status rs-table-status-error rs-table-status-striped"></td>
       <td class="rs-table-checkbox"><input type="checkbox" /></td>
       <td class="rs-table-cog">
         <div class="rs-dropdown">
