[Enhancement][List View Docs] Removes dud javascript call on popover forms

--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -1,7 +1,7 @@
 <div class="rs-popover invisible" id="confirm-delete-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-horizontal" action="javascript:exampleSubmit($(this));">
+    <form class="rs-form rs-form-horizontal">
       <div class="rs-popover-body">
         <strong>Permanently delete</strong> this [item]?
       </div>
@@ -16,7 +16,7 @@
 <div class="rs-popover invisible" id="confirm-delete-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-horizontal" action="javascript:exampleSubmit($(this));">
+    <form class="rs-form rs-form-horizontal">
       <div class="rs-popover-body">
         <strong>Permanently delete</strong> this [item]?
       </div>
