--- a/docs/_includes/popover-rename-server.html
+++ b/docs/_includes/popover-rename-server.html
@@ -1,7 +1,7 @@
 <div class="rs-popover invisible" id="rename-server-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-vertical" action="javascript:exampleSubmit($(this));">
+    <form class="rs-form rs-form-vertical">
       <div class="rs-popover-body">
         <label>Item Name</label>
         <input type="text" class="input-large" value="Item Name">
@@ -17,7 +17,7 @@
 <div class="rs-popover invisible" id="rename-server-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form rs-form-vertical" action="javascript:exampleSubmit($(this));">
+    <form class="rs-form rs-form-vertical">
       <div class="rs-popover-body">
         <label>Item Name</label>
         <input type="text" class="input-large" value="Item Name">
