--- a/docs/_includes/popover-resize-server.html
+++ b/docs/_includes/popover-resize-server.html
@@ -80,7 +80,7 @@
 <div class="rs-popover invisible" id="resize-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
-    <form class="rs-form" action="javascript:exampleSubmit($(this));">
+    <form class="rs-form">
       <div class="rs-popover-body">
         <p>Choose a new size for this server:</p>
         <div class="rs-embedded-list-table-wrapper rs-embedded-small rs-select-table">
