--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,7 @@
   <script type="application/javascript" src="/js/overlay.js"></script>
   <script type="application/javascript" src="/js/form.js"></script>
   <script type="application/javascript" src="/js/heartbeat-example.js"></script>
+  <script type="application/javascript" src="/js/batch-delete-example.js"></script>
 </head>
 <body class="rs-responsive">
   <div class="rs-wrapper">
