[Docs Update][Table Progress]  Removes progress classes that don't have a use case

--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -153,19 +153,7 @@
   }
 }
 
-.rs-table-progress-ok {
-  td {
-    background-image: url('progress-background-success-lightest.gif');
-  }
-}
-
-.rs-table-progress-warning {
-  td {
-    background-image: url('progress-background-success-lightest.gif');
-  }
-}
-
-.rs-table-progress-error {
+.rs-activity-ok {
   td {
     background-image: url('progress-background-success-lightest.gif');
   }
