[Enhancement][Blue Progress Bar] removes rs-status-neutral rule

--- a/lib/stylesheets/patterns/_progress.scss
+++ b/lib/stylesheets/patterns/_progress.scss
@@ -46,7 +46,7 @@
   border-right: 1px solid $white;
 }
 
-.rs-bar-info, .rs-status-neutral, .rs-status-info  {
+.rs-bar-info, .rs-bar.rs-status-info  {
   background: $blue;
 
   &.rs-bar-striped {
