--- a/docs/_includes/facets.html
+++ b/docs/_includes/facets.html
@@ -1,118 +1,133 @@
 <div class="rs-inner" id="facets-example">
-  <h2 class="rs-page-title">{Product Name}</h2>
-  <div class="rs-facet-item rs-clear-facets selected">
-    <div class="rs-facet-label">All {Product}s</div>
-    <div class="rs-facet-count">(10)</div>
-  </div>
-  <div class="rs-facet-section rs-facet-section-small collapsed">
-    <div class="rs-facet-section-title">Tags</div>
-    <div class="rs-facet-section-body">
-      <ul class="rs-facet-list">
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Development</div>
-          <div class="rs-facet-count">(3)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Staging</div>
-          <div class="rs-facet-count">(1)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Production</div>
-          <div class="rs-facet-count">(1)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Billing</div>
-          <div class="rs-facet-count">(3)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Marketing</div>
-          <div class="rs-facet-count">(2)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Product</div>
-          <div class="rs-facet-count">(5)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Engineering</div>
-          <div class="rs-facet-count">(8)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Sales</div>
-          <div class="rs-facet-count">(2)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Finance</div>
-          <div class="rs-facet-count">(1)</div>
-        </li>
-        <li class="rs-facet-section-toggle">
-          <i class="rs-arrow"></i>more
-        </li>
-      </ul>
+      <div class="rs-facets-header">
+        <div class="rs-clear-facets-link rs-hidden">clear all</div>
+        <div class="rs-facets-title">Filter {Product}s</div>
+      </div>
+      <div class="rs-facet-section rs-facet-section-small collapsed">
+        <div class="rs-facets-section-header">
+          <div class="rs-clear-facets-link rs-hidden">clear</div>
+          <div class="rs-facet-section-title">Tags</div>
+        </div>
+        <div class="rs-facet-section-body">
+          <ul class="rs-facet-list">
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Development</div>
+              <div class="rs-facet-count">(3)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Staging</div>
+              <div class="rs-facet-count">(1)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Production</div>
+              <div class="rs-facet-count">(1)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Billing</div>
+              <div class="rs-facet-count">(3)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Marketing</div>
+              <div class="rs-facet-count">(2)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Product</div>
+              <div class="rs-facet-count">(5)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Engineering</div>
+              <div class="rs-facet-count">(8)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Sales</div>
+              <div class="rs-facet-count">(2)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Finance</div>
+              <div class="rs-facet-count">(1)</div>
+            </li>
+            <li class="rs-facet-section-toggle">
+              <i class="rs-arrow"></i>more
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-facet-section">
+        <div class="rs-facets-section-header">
+          <div class="rs-clear-facets-link rs-hidden">clear</div>
+          <div class="rs-facet-section-title">Status</div>
+        </div>
+        <div class="rs-facet-section-body">
+          <ul class="rs-facet-list">
+            <li class="rs-facet-item">
+              <i class="rs-status-error"></i>
+              <div class="rs-facet-label">Error</div>
+              <div class="rs-facet-count">(2)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-status-warning"></i>
+              <div class="rs-facet-label">Rebooting</div>
+              <div class="rs-facet-count">(3)</div>
+            </li>
+            <li class="rs-facet-item">
+              <i class="rs-status-ok"></i>
+              <div class="rs-facet-label">Active</div>
+              <div class="rs-facet-count">(5)</div>
+            </li>
+            <li class="rs-facet-section-toggle">
+              <i class="rs-arrow"></i>more
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-facet-section">
+        <div class="rs-facets-section-header">
+          <div class="rs-clear-facets-link rs-hidden">clear</div>
+          <div class="rs-facet-section-title">Image</div>
+        </div>
+        <div class="rs-facet-section-body">
+          <ul class="rs-facet-list">
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Ubuntu 10.04 LTS</div>
+              <div class="rs-facet-count">(3)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">RHEL 6.5</div>
+              <div class="rs-facet-count">(1)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Debian 7 Wheezy</div>
+              <div class="rs-facet-count">(2)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">Vyatta Network OS 6.5R2</div>
+              <div class="rs-facet-count">(4)</div>
+            </li>
+            <li class="rs-facet-section-toggle">
+              <i class="rs-arrow"></i>more
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="rs-facet-section">
+        <div class="rs-facets-section-header">
+          <div class="rs-clear-facets-link rs-hidden">clear</div>
+          <div class="rs-facet-section-title">Flavor</div>
+        </div>
+        <div class="rs-facet-section-body">
+          <ul class="rs-facet-list">
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">2 GB Standard Instance</div>
+              <div class="rs-facet-count">(10)</div>
+            </li>
+            <li class="rs-facet-item">
+              <div class="rs-facet-label">512 MB Standard Instance</div>
+              <div class="rs-facet-count">(10)</div>
+            </li>
+            <li class="rs-facet-section-toggle">
+              <i class="rs-arrow"></i>more
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="rs-facet-section">
-    <div class="rs-facet-section-title">Status</div>
-    <div class="rs-facet-section-body">
-      <ul class="rs-facet-list">
-        <li class="rs-facet-item">
-          <i class="rs-status-error"></i>
-          <div class="rs-facet-label">Error</div>
-          <div class="rs-facet-count">(2)</div>
-        </li>
-        <li class="rs-facet-item">
-          <i class="rs-status-warning"></i>
-          <div class="rs-facet-label">Rebooting</div>
-          <div class="rs-facet-count">(3)</div>
-        </li>
-        <li class="rs-facet-item">
-          <i class="rs-status-ok"></i>
-          <div class="rs-facet-label">Active</div>
-          <div class="rs-facet-count">(5)</div>
-        </li>
-        <li class="rs-facet-section-toggle">
-          <i class="rs-arrow"></i>more
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="rs-facet-section">
-    <div class="rs-facet-section-title">Image</div>
-    <div class="rs-facet-section-body">
-      <ul class="rs-facet-list">
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Ubuntu 10.04 LTS</div>
-          <div class="rs-facet-count">(3)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">RHEL 6.5</div>
-          <div class="rs-facet-count">(1)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Debian 7 Wheezy</div>
-          <div class="rs-facet-count">(2)</div>
-        </li>
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">Vyatta Network OS 6.5R2</div>
-          <div class="rs-facet-count">(4)</div>
-        </li>
-        <li class="rs-facet-section-toggle">
-          <i class="rs-arrow"></i>more
-        </li>
-      </ul>
-    </div>
-  </div>
-  <div class="rs-facet-section">
-    <div class="rs-facet-section-title">Flavor</div>
-    <div class="rs-facet-section-body">
-      <ul class="rs-facet-list">
-        <li class="rs-facet-item">
-          <div class="rs-facet-label">2 GB Standard Instance</div>
-          <div class="rs-facet-count">(10)</div>
-        </li>
-        <li class="rs-facet-section-toggle">
-          <i class="rs-arrow"></i>more
-        </li>
-      </ul>
-    </div>
-  </div>
-</div>
