--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,9 +4,9 @@
 
   <title>Rackspace&reg; Canon - The front-end application framework</title>
 
-  <link rel="stylesheet" href="http://rackerlabs.github.io/canon/assets/canon.min.css">
-  <link rel="stylesheet" type="text/css" href="http://rackerlabs.github.io/canon/css/site.css">
-  <link rel="stylesheet" type="text/css" href="http://rackerlabs.github.io/canon/css/syntax.css">
+  <link rel="stylesheet" href="{{site.baseurl}}/assets/canon.min.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/site.css">
+  <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/css/syntax.css">
 
   <script type="application/javascript" src="http://code.jquery.com/jquery-1.10.1.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/assets/canon.min.js"></script>
