[Enhancement][rs-plus] adds disabled state for plus icon

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -183,9 +183,14 @@ input::-moz-focus-inner {
 
   &:active,
   &.active,
-  &:hover,
-  &.hover {
+  &:hover:not(.disabled),
+  &.hover:not(.disabled) {
     @include icon-sprite(plus-dotted-blue);
+  }
+
+  &.disabled,
+  &:disabled {
+    @include icon-sprite(plus-dotted-grey-faded);
   }
 }
 
