[Docs Update][Document List View Interactions] Adds disabled row to list table ui component docs

--- a/docs/_includes/table-status-column.html
+++ b/docs/_includes/table-status-column.html
@@ -27,6 +27,12 @@
       <td class="rs-table-text">Product is not working as intended</td>
     </tr>
     <tr>
+      <td class="rs-table-status rs-table-status-disabled"></td>
+      <td class="rs-table-link">Disabled</td>
+      <td class="rs-table-text">rs-table-status-disabled</td>
+      <td class="rs-table-text">Product has been disabled or removed from activity by a user-initiated action</td>
+    </tr>
+    <tr>
       <td class="rs-table-status rs-table-status-ok rs-table-status-striped"></td>
       <td class="rs-table-link">Ok - Striped</td>
       <td class="rs-table-text">rs-table-status-striped</td>
