--- a/docs/_includes/list-view-table.html
+++ b/docs/_includes/list-view-table.html
@@ -65,6 +65,21 @@
       <td class="rs-table-text">Data C</td>
     </tr>
     <tr>
+      <td class="rs-table-status rs-table-status-disabled"></td>
+      <td class="rs-table-checkbox"><input type="checkbox" disabled="disabled"></td>
+      <td class="rs-table-cog">
+        <div class="rs-dropdown">
+          <div class="rs-cog rs-dropdown-toggle disabled"></div>
+          <ul class="rs-dropdown-menu hidden">
+            <li><span class="rs-dropdown-category">Manage</span></li>
+            <li><a href="#">Action Name&hellip;</a></li>
+          </ul>
+        </div>
+      </td>
+      <td class="rs-table-link"><a href="javascript:void(0);">Item Three</a></td>
+      <td class="rs-table-text">Data C</td>
+    </tr>
+    <tr>
       <td class="rs-table-status rs-table-status-ok rs-table-status-striped"></td>
       <td class="rs-table-checkbox"><input type="checkbox" /></td>
       <td class="rs-table-cog">
