Fix demo links.

--- a/docs/_includes/demos/utility_nav.html
+++ b/docs/_includes/demos/utility_nav.html
@@ -1,10 +1,10 @@
 <div class="rs-nav-utility">
   <div class="rs-container">
     <ul class="rs-nav">
-      <li><a href="index.html" >MyRackspace</a></li>
-      <li class="active"><a href="{{ site.baseurl }}demos/index.html" >MyCloud</a></li>
-      <li><a href="index.html" >Private Cloud</a></li>
-      <li><a href="index.html" >Cloud Sites</a></li>
+      <li><a href="{{ site.baseurl }}/demos/index.html">MyRackspace</a></li>
+      <li class="active"><a href="{{ site.baseurl }}/demos/index.html">MyCloud</a></li>
+      <li><a href="{{ site.baseurl }}/demos/index.html">Private Cloud</a></li>
+      <li><a href="{{ site.baseurl }}/demos/index.html">Cloud Sites</a></li>
     </ul>
     <ul class="rs-nav rs-pull-right">
       <li class="rs-dropdown rs-utility-dropdown">
