--- a/docs/_layouts/demos.html
+++ b/docs/_layouts/demos.html
@@ -7,10 +7,10 @@
   <title>{{ page.title }} | Canon Demo</title>
   <meta name="viewport" content="width=device-width">
 
-  <link rel="stylesheet" type="text/css" href="/canon.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/canon.min.css">
 
   <script type="application/javascript" src="//code.jquery.com/jquery-1.10.0.min.js"></script>
-  <script type="application/javascript" src="//cd0561583af076c5d1bb-b0a668e5876bef6fe25684caf71db405.r89.cf1.rackcdn.com/v1-latest/canon.min.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/assets/canon.min.js"></script>
 
   <script type="application/javascript">
 
