[New Feature][Add Cascade] Adds special styles for rs-overlay to the cascade
margin removes the -20px top margin
height stretches the overlay to fill the column
padding on the content is to get the text away from the edges

--- a/lib/stylesheets/patterns/cascade.scss
+++ b/lib/stylesheets/patterns/cascade.scss
@@ -3,6 +3,15 @@
 .rs-cascade {
   border: 1px solid $grey300;
   overflow: hidden;
+
+  .rs-overlay {
+    margin: 0;
+    height: 100%;
+  }
+
+  .rs-overlay-content {
+    padding: 0 30px;
+  }
 }
 
 .rs-cascade-column {
