--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -90,7 +90,9 @@
       text-decoration: none;
 
       &:hover,
-      &.hover {
+      &.hover,
+      &:focus,
+      &.focus {
         color: $red;
         background-color: #f5f5f5;
       }
@@ -169,7 +171,9 @@
       }
 
       &:hover,
-      &.hover {
+      &.hover,
+      &:focus,
+      &.focus {
         color: #fff;
         background-color: #444;
 
