--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -107,7 +107,7 @@
     > .rs-caret {
       width: 16px;
       height: 16px;
-      background: url('loading-indicator.gif');
+      background: image-url('loading-indicator.gif');
     }
   }
 }
