--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -98,7 +98,7 @@
 	margin-top: 10px;
 
 	a {
-		background: transparent url(./logo-rackspace.png) no-repeat center center;
+		background: transparent image-url('logo-rackspace.png') no-repeat center center;
 		width: 164px;
 		height: 70px;
 		display: block;
